# Tsoa with Express/src/docs/swagger.json
@@ -147,6 +147,14 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "sort",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
 					}
 				]
 			}
