# Tsoa with Express/src/routes/v1/routes.ts
@@ -142,6 +142,7 @@ export function RegisterRoutes(app: Router) {
                     ageMin: {"in":"query","name":"ageMin","dataType":"double"},
                     ageMax: {"in":"query","name":"ageMax","dataType":"double"},
                     nameUser: {"in":"query","name":"name","dataType":"string"},
+                    sort: {"in":"query","name":"sort","dataType":"string"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
